<resources>
    <string name="app_name">Reg·Here</string>
    <string name="app_title_name">Registration·Here</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Setting</string>
    <string name="login">Login</string>
    <string name="detail">Detail</string>
    <string name="action_sign_in">Regist and login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Email Address Wrong</string>
    <string name="course_name">Courese Name:</string>
    <string name="create_course">Create Course</string>
    <string name="course_time">Courese Time:</string>
    <string name="isRepeat">Repeat:</string>
    <string name="description">Description:</string>
    <string name="action_logout">Logout</string>
    <string name="classroom">Classroom:</string>
    <string name="error_field_required">Require</string>
    <string name="error_incorrect_password">Password Wrong</string>
    <string name="error_invalid_password">Must more than 6 words</string>
    <string name="error_invalid_phone">Mobile phone number wrong</string>
    <string name="get_verify_code">Get verify code</string>
    <string name="mobile_phone">Phone number</string>
    <string name="no">No</string>
    <string name="prompt_password">Passwrod</string>
    <string name="publish">Publish</string>
    <string name="register">Regist</string>
    <string name="seletct_a_pic">Choose a picture from album</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Regist</string>
    <string name="username">Username</string>
    <string name="verify">Verify</string>
    <string name="verify_code">Verify code</string>
    <string name="verify_phone">Verify phone number</string>
    <string name="yes">Yse</string>
    <string name="course_description_hint">describe the course</string>
    <string name="cancel">Cancel</string>
    <string name="get_registration_location">Click to get the location to registration</string>
    <string name="week_sunday">Sunday</string>
    <string name="week_monday">Monday</string>
    <string name="week_tuesday">Tuesday</string>
    <string name="week_wednesday">Wednesday</string>
    <string name="week_thursday">Thursday</string>
    <string name="week_friday">Friday</string>
    <string name="week_saturday">Saturday</string>
    <string name="succeed">succeed</string>
    <string name="error">error</string>
    <string name="add_course">Add course</string>
    <string name="empty_course">you have not added course</string>
</resources>
