<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.electhuang.here.view.DetailActivity">

    <LinearLayout
        style="@style/group_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CourseName:"/>

        <TextView
            android:id="@+id/tv_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Course"/>
    </LinearLayout>
    <LinearLayout
        style="@style/group_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Teacher:"/>

        <TextView
            android:id="@+id/tv_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Teacher"/>
    </LinearLayout>

    <LinearLayout
        style="@style/group_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Classroom:"/>

        <TextView
            android:id="@+id/tv_classroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Classroom"/>
    </LinearLayout>

    <LinearLayout
        style="@style/group_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_time"
            android:textSize="@dimen/default_font_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_course_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="XX:XX"
                android:textSize="@dimen/default_font_size"/>

            <TextView
                android:id="@+id/tv_course_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="XX月XX日XX年"
                android:textSize="@dimen/default_font_size"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/group_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="@dimen/default_font_size"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="无"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="签到"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="加入课程"
        android:visibility="gone"/>
</LinearLayout>